--- a/EnergyTradingSystem/.classpath
+++ b/EnergyTradingSystem/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/jade.jar"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.23.1.jar"/>
+	<classpathentry kind="lib" path="D:/Mark Backup/Bachelor/3rd year/2nd Semester/COS30018 - Intelligent Systems/Assignment/IntelligenceSystemProject/EnergyTradingSystem/lib/opencsv-4.2.jar"/>
+	<classpathentry kind="lib" path="D:/Mark Backup/Bachelor/3rd year/2nd Semester/COS30018 - Intelligent Systems/Assignment/IntelligenceSystemProject/EnergyTradingSystem/lib/commons-lang3-3.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
