--- a/EnergyTradingSystem/.classpath
+++ b/EnergyTradingSystem/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/jade.jar"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.23.1.jar"/>
-	<classpathentry kind="lib" path="D:/Mark Backup/Bachelor/3rd year/2nd Semester/COS30018 - Intelligent Systems/Assignment/IntelligenceSystemProject/EnergyTradingSystem/lib/opencsv-4.2.jar"/>
-	<classpathentry kind="lib" path="D:/Mark Backup/Bachelor/3rd year/2nd Semester/COS30018 - Intelligent Systems/Assignment/IntelligenceSystemProject/EnergyTradingSystem/lib/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/opencsv-4.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
